// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notifications Service when listing notifications for a user will list notifications and include dismissed notifications upon request 1`] = `
[
  {
    "active": 1711206877852,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": undefined,
    "icon": "muscle",
    "id": "66c5d4d7-8126-4b05-9f2a-6774a7313d2b",
    "message": "Eaque animi aperiam officiis similique. Atque doloribus voluptates alias ipsum eaque. Quam dolore dignissimos porro voluptate porro iste quae. Fuga nesciunt debitis. Cupiditate fugiat fugiat est eos quam officia occaecati voluptatem. Delectus at corrupti ipsam.",
    "title": "Similique nesciunt optio.",
  },
  {
    "active": 1710797486978,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1712338844964,
    "icon": "chop",
    "id": "e0692ce8-27f5-48bd-82a6-db01488799ee",
    "message": "Aperiam itaque voluptas. Quasi et aliquam corporis. Culpa voluptas ab. Totam vel quos. Est voluptatibus placeat facere officia at. Libero soluta facilis eius.",
    "title": "Repellendus aliquam ullam.",
  },
  {
    "active": 1710765272992,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1712688614358,
    "icon": "reprocessing",
    "id": "62b7c664-d3ba-4016-8af1-e3c488d5823e",
    "message": "At earum voluptas quia. Corporis rerum totam saepe cumque repellendus laboriosam quisquam quibusdam magnam. Veritatis incidunt optio animi quod id amet aperiam.",
    "title": "Magni quas impedit dolorum accusamus rem facilis.",
  },
  {
    "active": 1709542002351,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1713587026987,
    "icon": "father-in-law",
    "id": "e7420f46-581b-45f5-8853-d1b780bb719a",
    "message": "Quisquam voluptatum maxime tenetur ipsam esse reprehenderit cum molestias. Nam nisi cumque totam placeat distinctio cupiditate alias. Reprehenderit dignissimos reprehenderit. Sit commodi amet cum eveniet perspiciatis incidunt.",
    "title": "Omnis illum dolorum nobis tenetur officia aliquam ex voluptatum laboriosam.",
  },
  {
    "active": 1709536672302,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1713881813120,
    "icon": "silo",
    "id": "882ee7cf-bcd4-4671-aac9-80f7bfd84b7c",
    "message": "Ratione dolores quod illo nisi fuga corrupti. Quaerat iure doloremque minima. Quod voluptatum laborum provident neque eos libero. Itaque quibusdam nihil molestiae. Rem placeat sint quas eius provident doloribus ut.",
    "title": "Voluptatem ullam explicabo accusamus culpa placeat reiciendis.",
  },
  {
    "active": 1708657517861,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1713656771927,
    "icon": "ceiling",
    "id": "64aedd36-6eb6-4c77-acbd-5611014c74c9",
    "message": "Possimus laboriosam id libero est nobis quod. Pariatur harum ut cumque ad quae quasi. Fugit aut incidunt accusantium hic saepe. Nam excepturi error perferendis veniam dolore. Ducimus ipsam modi iusto tenetur nam.",
    "title": "Tempore eum ad exercitationem fugiat et rerum.",
  },
  {
    "active": 1706868763860,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1711531681364,
    "icon": "gamma-ray",
    "id": "e7c28880-7bdf-4fe6-bfbf-23a8fd49043e",
    "message": "Nisi doloremque repudiandae. Velit fugit laborum illum culpa ducimus mollitia explicabo esse. Molestiae voluptatum nesciunt odit amet voluptate. Labore corrupti voluptates et earum modi adipisci. Similique laborum fugit facere.",
    "title": "Quia eum possimus accusantium optio ex reiciendis.",
  },
  {
    "active": 1706416826392,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1711516217406,
    "icon": "luxury",
    "id": "24fe8aca-9a75-4b23-8734-9214f319195e",
    "message": "Dicta asperiores odio. Aut aut non aliquam deserunt quae quia adipisci. Earum in eos placeat dolores placeat nobis optio id veritatis. Cum non quasi magni. A ex praesentium pariatur.",
    "title": "Ea accusantium tempora.",
  },
  {
    "active": 1706346302434,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1711481953679,
    "icon": "alley",
    "id": "f8c26922-638a-4bac-a9b4-2d0a6a6e5512",
    "message": "Hic ducimus ducimus. Impedit error asperiores laudantium sint. Illum ipsum nulla veniam praesentium iste.",
    "title": "Quae expedita natus eum molestiae eaque accusamus vitae.",
  },
  {
    "active": 1706226256285,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1713357766217,
    "icon": "vitamin",
    "id": "180a8843-cd33-4871-8383-899753b8fa31",
    "message": "Assumenda dolorem ab quibusdam cupiditate pariatur consequuntur laborum. Veritatis unde explicabo itaque optio inventore fuga et tempore. Iure ad ratione natus quaerat nisi architecto veniam. Voluptatibus quas ipsa repudiandae consequatur dignissimos quo consequuntur itaque modi.",
    "title": "Consectetur illo officiis corrupti labore veniam saepe maxime dolorum autem.",
  },
  {
    "active": 1705984656310,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1712336607118,
    "icon": "proximity",
    "id": "c523ebd4-2ffb-44ed-9320-18fc5315d864",
    "message": "Perferendis repudiandae quis repellat. Ipsa exercitationem ipsa aliquam assumenda voluptatibus delectus sapiente earum voluptas. Nostrum quasi necessitatibus neque repellendus ex quod. Culpa ea hic quasi.",
    "title": "Laborum corrupti commodi nam nemo atque sit molestiae rem sit.",
  },
  {
    "active": 1705203909503,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1711820635368,
    "icon": "tolerance",
    "id": "0dcb3ab3-1402-4b31-84b7-cc55dd902ad2",
    "message": "Aliquid quasi maiores adipisci exercitationem. Nulla cum autem numquam ullam hic deserunt rerum neque maiores. Placeat id blanditiis non eos reiciendis rem. Commodi vitae rerum. Illo vero est ab maxime. Harum veniam soluta voluptatibus esse.",
    "title": "Eius consequatur officiis saepe amet rerum ex consectetur nihil reiciendis.",
  },
  {
    "active": 1704723622240,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1713084943503,
    "icon": "exchange",
    "id": "e7e89014-5040-4100-930c-766d103de86c",
    "message": "Itaque rem adipisci ut accusamus minus omnis vitae. Animi dolore fugiat unde eum sunt voluptatum veniam quis. Dolore veniam alias odio minus illo. Possimus expedita aspernatur sit assumenda. Quod autem nesciunt in aperiam soluta sunt odio reprehenderit dolorum. Placeat harum quia nemo.",
    "title": "Cumque enim corrupti laboriosam fugit incidunt.",
  },
  {
    "active": 1704666965014,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1712843259698,
    "icon": "zoology",
    "id": "40698f77-3f9c-4c53-b9e8-bc424c3dfb2b",
    "message": "Cum iste nemo. Id tenetur quasi. Nisi laudantium pariatur culpa velit est voluptates nostrum fuga. Blanditiis hic porro similique dignissimos sequi esse. Hic est tempore illo qui velit error tempore expedita porro. Quis placeat voluptatem voluptate iusto molestias ex.",
    "title": "Nulla officiis illum.",
  },
  {
    "active": 1704583265621,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": undefined,
    "icon": "lobster",
    "id": "f1b7ad73-57c2-4fff-8d58-d4b72dcb8814",
    "message": "Voluptas veritatis ab ad. Perspiciatis eaque perferendis maiores eligendi molestias. Sunt suscipit quod adipisci.",
    "title": "Molestias nesciunt nihil molestiae dicta dolorem quaerat reprehenderit totam adipisci.",
  },
  {
    "active": 1704558922573,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": undefined,
    "icon": "highland",
    "id": "2d6fd254-7d3f-455f-829e-4eefc8f44808",
    "message": "Explicabo sint quaerat harum sequi maxime. Reiciendis quasi soluta voluptas. Maiores voluptatum maiores labore. Ullam iure beatae optio expedita magni sapiente.",
    "title": "Incidunt ex neque commodi in aut neque.",
  },
  {
    "active": 1704552999564,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1711912501753,
    "icon": "harmonize",
    "id": "947360d4-c8a4-4d86-b6d2-c14ac0902a73",
    "message": "Voluptate porro mollitia suscipit explicabo. Error voluptatem soluta. Architecto animi qui magnam sunt assumenda nesciunt sapiente praesentium numquam. Minima fugit doloribus. Libero laboriosam ab.",
    "title": "Iusto ullam magni a cum eaque inventore.",
  },
  {
    "active": 1704123613131,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1713618972612,
    "icon": "caviar",
    "id": "67fce478-d478-4700-8938-e6dca40b2d09",
    "message": "Aperiam minima voluptas. Rerum quaerat culpa. Debitis minus soluta nam ex. Cum ut eveniet quasi nobis. Unde sapiente cumque nisi quaerat nemo asperiores voluptatum itaque.",
    "title": "Impedit nulla illo hic consectetur facere neque quasi quaerat.",
  },
  {
    "active": 1703944963975,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1713176703019,
    "icon": "rally",
    "id": "e915b570-e8f4-4ca5-a1a0-6460db969715",
    "message": "Quia aliquid aperiam architecto molestiae debitis tempore nobis autem. Architecto ex praesentium iure. Qui rerum quas itaque. Vitae praesentium dolores rerum fugit natus. Facere omnis incidunt tempore excepturi sit aliquam similique dolorum. Alias eveniet occaecati deleniti.",
    "title": "Qui harum voluptatem.",
  },
  {
    "active": 1703121718755,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1713875405780,
    "icon": "top",
    "id": "2eb0bfb4-70a4-476e-89af-26de11154e6a",
    "message": "Iure est quod. Unde ea temporibus. Nihil saepe quas. Placeat quos quasi iusto consectetur perferendis. Eaque voluptatem soluta maxime hic voluptas aut delectus. Quasi itaque perspiciatis soluta.",
    "title": "Voluptates perferendis natus aperiam incidunt maiores in.",
  },
  {
    "active": 1702576021665,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1712161492615,
    "icon": "basement",
    "id": "fa0bb615-1715-418b-931f-ba1c7aa6d88d",
    "message": "Nesciunt consequuntur eos praesentium qui minima vero repudiandae nemo. Quasi dolorem hic aperiam provident sequi. Esse nam ad ducimus minima quae qui.",
    "title": "Quo corporis reprehenderit rerum laudantium ab veniam officia.",
  },
  {
    "active": 1702567223800,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1713497591878,
    "icon": "airbus",
    "id": "c6c82a3e-38db-471c-b89b-8c525bb926fb",
    "message": "Illum fuga fugiat ullam accusamus quos quos. Nulla magni laboriosam dolores. Aliquam excepturi accusamus hic assumenda commodi qui assumenda consectetur assumenda. Voluptatem saepe asperiores impedit. Sunt asperiores accusantium. Voluptatem cum eum laborum est veniam.",
    "title": "Quibusdam incidunt quasi quod.",
  },
  {
    "active": 1702486045978,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1712645753824,
    "icon": "cobbler",
    "id": "06ce0984-3506-4f9b-8da5-6e236a4ab84c",
    "message": "Sit inventore id quos consequuntur aut consectetur. Similique ab tempore dolorum modi veniam necessitatibus provident vel. Esse doloremque amet velit impedit molestias.",
    "title": "Rem minima veritatis beatae voluptas architecto laudantium error.",
  },
  {
    "active": 1702037516393,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": undefined,
    "icon": "doctorate",
    "id": "4afea3c0-a94d-4477-a77b-c38b361022d5",
    "message": "Tempore aspernatur veritatis suscipit dolore. Tenetur autem facere illum nam consequuntur enim libero placeat. Quibusdam dicta sit eius dignissimos reprehenderit necessitatibus accusantium. Facere blanditiis porro dolorum nobis ullam illum. Minus quidem necessitatibus. Ratione cumque eaque sunt excepturi suscipit eius.",
    "title": "Qui ut nemo.",
  },
  {
    "active": 1701927844883,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": undefined,
    "icon": "morning",
    "id": "e293157b-dbed-4199-b472-ecdd1926ff27",
    "message": "Iste voluptas magni non quidem porro porro atque eaque magnam. Commodi quaerat tempore earum nostrum exercitationem. Repellat nam velit molestiae rerum possimus hic nihil.",
    "title": "Voluptatum quos cum magnam optio rerum.",
  },
  {
    "active": 1701702054262,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1712099850299,
    "icon": "arrival",
    "id": "f24d93f9-947e-4cdf-b002-305c4a2650d7",
    "message": "Sapiente quibusdam accusamus earum nostrum in. Quibusdam perspiciatis eligendi cupiditate libero vitae vel aperiam. Fugit aut doloremque accusamus vitae laudantium consequuntur. Sed voluptatem esse earum. Tempore itaque odit vero mollitia magni consequuntur optio.",
    "title": "Suscipit nemo earum.",
  },
  {
    "active": 1701349672415,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": undefined,
    "icon": "colt",
    "id": "92e27630-370f-445d-aa8a-286b9cf0728a",
    "message": "Nesciunt nam accusantium delectus quod nisi facilis qui. Delectus sed officia sunt consequatur fuga odio non ex. Atque architecto optio commodi sit. Omnis molestias voluptatibus quae modi fugit. Unde explicabo sit delectus cupiditate sit adipisci fugiat necessitatibus. Voluptates corporis rerum animi sequi iure libero vel minima culpa.",
    "title": "Consequatur corporis nulla natus.",
  },
  {
    "active": 1701205962734,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1712263643283,
    "icon": "remnant",
    "id": "3e748377-51c2-4c74-8ddc-a2470898e0c0",
    "message": "Maiores eos iusto cumque vitae commodi est. Assumenda earum in et reiciendis omnis. Dolorum sed ex ipsum. Esse eum error eligendi quod. Hic voluptas dolores officiis quidem porro distinctio aperiam velit at.",
    "title": "Asperiores neque dignissimos sequi dolore nihil.",
  },
  {
    "active": 1700667665833,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1711839876333,
    "icon": "hoe",
    "id": "a6ca14d7-996d-4a97-b049-0e6ecbdff381",
    "message": "Aliquam dignissimos quisquam. Id tenetur a nostrum ullam. Esse repudiandae repudiandae explicabo dolores a omnis. Eos tempora quia repudiandae non voluptatum. Sed consequatur deserunt maxime optio laborum nisi odit. Molestias harum facere distinctio mollitia.",
    "title": "Molestiae ex porro nobis sit expedita architecto.",
  },
  {
    "active": 1700388652218,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1711462964487,
    "icon": "acquaintance",
    "id": "19308583-cd3a-448b-a829-71be103e768e",
    "message": "Iusto fugit eligendi possimus nisi harum dignissimos non odit facere. Illum accusamus itaque. Delectus perspiciatis delectus sed aliquam quo necessitatibus nulla necessitatibus esse. Non ullam rem culpa error provident facilis rerum. Pariatur ipsam at officiis fuga rerum ea assumenda. Vel praesentium consequuntur maxime.",
    "title": "Iste voluptate iusto iure deserunt earum placeat.",
  },
  {
    "active": 1700339842816,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1713285703158,
    "icon": "neologism",
    "id": "de6235dd-3cc7-46b1-889c-4e4d33c4570c",
    "message": "Natus blanditiis illum at voluptates incidunt porro repudiandae nisi. Molestias quae quos. Adipisci quo magnam quam tempora assumenda quo voluptatum maxime. Similique dolor consequuntur non hic ullam corporis dignissimos.",
    "title": "Corrupti repudiandae perferendis assumenda expedita aut.",
  },
  {
    "active": 1700132947597,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": undefined,
    "icon": "handle",
    "id": "02c5d5ac-8fbe-4a3f-a1dd-413a79d74cb6",
    "message": "Nihil deleniti neque molestiae debitis officia eum. Corporis recusandae illum aliquam quia doloremque facere consectetur. Dolorem delectus nisi placeat.",
    "title": "Sed ea culpa.",
  },
  {
    "active": 1699853520679,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1711586462169,
    "icon": "tangerine",
    "id": "b76dc3de-821c-44c0-8ad2-abc332c5fd6e",
    "message": "Sunt consectetur error accusantium voluptatum aperiam assumenda magni repellat. Dicta recusandae ullam illo vero minus. Vitae sint laboriosam sit necessitatibus ut. Nemo assumenda rerum. Unde magnam natus.",
    "title": "Cumque consequatur nulla debitis laboriosam perferendis.",
  },
  {
    "active": 1699780400667,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1712692653467,
    "icon": "panty",
    "id": "42592163-c976-4dc4-85c2-f7355093c96e",
    "message": "Accusantium assumenda mollitia id eveniet. Odio dolorum laboriosam. Vero voluptatem ipsam dolor molestiae aut.",
    "title": "Laudantium quis occaecati explicabo.",
  },
  {
    "active": 1699750105073,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1712481533350,
    "icon": "intervention",
    "id": "800cd884-dc61-4573-bfee-fd6613dc74aa",
    "message": "Magni error animi dignissimos voluptate expedita alias vero praesentium. Ipsam excepturi porro voluptatum tempore deserunt esse eius at aliquid. Nihil autem aperiam corporis animi laboriosam officia aliquam ipsa molestias. Tenetur asperiores perferendis iure facilis fugiat.",
    "title": "Perspiciatis ad similique explicabo deleniti labore a minima non veritatis.",
  },
  {
    "active": 1699675272096,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1713261209601,
    "icon": "intention",
    "id": "164ea067-98e9-4624-aabc-fc69023b77a0",
    "message": "Vitae expedita hic fuga aliquam natus asperiores. Amet architecto nisi tempore dignissimos inventore vel ex architecto exercitationem. Dolor mollitia a quia tenetur in illum excepturi necessitatibus. Facere quis nulla amet iste adipisci consequatur nemo a. Veniam architecto illo.",
    "title": "Quaerat placeat nobis eius ipsam asperiores tempore necessitatibus velit.",
  },
  {
    "active": 1699537309129,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1713367781027,
    "icon": "cloves",
    "id": "112c44ac-02ec-4626-bca8-da7ff6804599",
    "message": "Ea magni explicabo ipsum nisi quas ad reiciendis ipsam. Ab esse quod iste labore consequuntur adipisci blanditiis voluptates beatae. Maiores aliquam tempore sed voluptatem deserunt. Illum autem autem. Eligendi repellat eius ullam pariatur officiis eius. Facere labore voluptates ea excepturi tenetur.",
    "title": "Quibusdam quasi dolorem quidem.",
  },
  {
    "active": 1699105426137,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": undefined,
    "icon": "trade",
    "id": "6f12a2f9-9ca6-4596-a4c6-35b4abe0c0b8",
    "message": "Suscipit quidem omnis esse molestiae id laborum. Vitae unde totam. Error veritatis quaerat dignissimos illum quia. Quibusdam animi esse explicabo quam.",
    "title": "Dolores accusantium magni.",
  },
  {
    "active": 1698912918389,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1713782891897,
    "icon": "selection",
    "id": "714e71ac-ed33-41ad-92fb-5e1ae587cb28",
    "message": "Eius explicabo ea doloremque. Ex voluptatum animi quibusdam repellat occaecati nulla occaecati nam consequatur. Aliquam sint numquam ab aspernatur. Iure cum voluptatem unde architecto ullam optio delectus ullam voluptas. Eum aperiam doloremque odio mollitia eveniet vitae quis inventore.",
    "title": "Laborum quae ullam perferendis.",
  },
  {
    "active": 1698898027108,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1711638689876,
    "icon": "comment",
    "id": "e569788f-d065-4f73-a7a5-2b4039fed33f",
    "message": "Quidem quasi impedit ipsam reprehenderit accusantium praesentium. Repudiandae dolorum saepe. Perferendis provident corrupti eos aliquid quae nemo. Totam consectetur molestias qui hic porro non alias odit. Non quo labore.",
    "title": "Harum eligendi nihil ab quae veniam eius.",
  },
  {
    "active": 1698692853441,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1713081125718,
    "icon": "jellybeans",
    "id": "7e1c7caa-af81-439f-9236-1ef8f09a09b5",
    "message": "Libero a asperiores ea laboriosam ipsa culpa eaque. Ad necessitatibus distinctio harum aut ad ullam nulla minima. Provident odit sunt dicta. Quidem dolores ex dignissimos minus in inventore distinctio beatae reprehenderit. Animi culpa vel sapiente autem eaque omnis. Nam praesentium itaque id.",
    "title": "Perferendis vero velit tempore.",
  },
  {
    "active": 1698262659162,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1712687052887,
    "icon": "lawn",
    "id": "00cbd623-d0a6-4f8c-b14d-0baed170b949",
    "message": "Perferendis error recusandae alias repellendus. Laboriosam inventore recusandae. Ipsam totam unde deserunt dignissimos rerum accusantium. Vel laborum odit.",
    "title": "Inventore distinctio sit.",
  },
  {
    "active": 1697913373629,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1711505509709,
    "icon": "prostanoid",
    "id": "cb8116ad-e9da-4236-9102-b3f69d777df4",
    "message": "Eius illo illo maiores perspiciatis nobis similique exercitationem rem magnam. Porro itaque ea. Atque rem cupiditate soluta beatae neque reprehenderit.",
    "title": "Et cupiditate natus odio consequuntur distinctio.",
  },
  {
    "active": 1697890610693,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1713413148177,
    "icon": "grassland",
    "id": "049eebd4-17ca-4e46-a671-d6a76cf58689",
    "message": "Quos quidem consectetur architecto. Voluptates magnam laboriosam tenetur. Aliquid sed autem.",
    "title": "Sunt labore nesciunt cupiditate dignissimos enim optio eos.",
  },
  {
    "active": 1697407209235,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1713901277457,
    "icon": "wriggler",
    "id": "45663ddd-a334-4126-bfde-1863f06a9ae0",
    "message": "Perspiciatis numquam perspiciatis illum dolores inventore possimus delectus vitae tempora. Culpa veritatis labore necessitatibus qui accusamus harum. Nam a aperiam hic dolor tempore.",
    "title": "Assumenda quas ullam exercitationem ex praesentium maiores nisi.",
  },
  {
    "active": 1697190409611,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1712463836126,
    "icon": "balloon",
    "id": "48b3856a-cc0d-42e2-97a2-93380e941bee",
    "message": "Aliquid eligendi placeat iure excepturi perferendis praesentium ullam. Error sequi in velit iusto deserunt dolorem labore. Totam recusandae quos. Id corrupti ipsum minima ut officia. Delectus temporibus tempore.",
    "title": "Repellendus neque debitis libero optio voluptatum eius laboriosam iusto.",
  },
  {
    "active": 1697076585819,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": 1712266292105,
    "icon": "anagram",
    "id": "d1c60ed4-a018-4981-aad7-aa176cf553a5",
    "message": "Eos delectus ea tempore magni eum id facilis. Expedita voluptates ipsam consequuntur odit laborum. Perferendis fugit eveniet perspiciatis consectetur distinctio suscipit reiciendis eum.",
    "title": "Tempora consectetur aliquid occaecati explicabo.",
  },
  {
    "active": 1697006325398,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": undefined,
    "icon": "burst",
    "id": "b5d1da99-c8d2-45e0-b8fe-02bcf6e53db0",
    "message": "Quod deserunt similique atque ab dicta. Enim accusantium consequuntur aliquid sint iure. Quod necessitatibus ad doloribus. Alias blanditiis autem eligendi doloribus quaerat quas facilis ea explicabo.",
    "title": "Asperiores occaecati ipsa pariatur iure similique incidunt.",
  },
  {
    "active": 1696747606071,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": undefined,
    "icon": "syrup",
    "id": "4d429566-bf82-4478-aa05-2cfa98eb87d9",
    "message": "Quisquam culpa at assumenda unde velit eius ipsa dicta. Porro dignissimos velit quia quisquam ab provident harum voluptatem recusandae. Itaque ipsum corrupti sunt eos eos quae sunt. Reprehenderit deleniti magni atque dolorum.",
    "title": "Laudantium totam placeat consectetur.",
  },
  {
    "active": 1696707476627,
    "callsToAction": undefined,
    "dismissed": true,
    "expires": undefined,
    "icon": "tambour",
    "id": "18668dbe-1455-4a7d-833e-0a9cfe929572",
    "message": "Assumenda et necessitatibus assumenda. Beatae quam eius. Consectetur incidunt occaecati asperiores. Facilis ratione ducimus officia quisquam explicabo at dolores ex dolores.",
    "title": "Quo minima tenetur dignissimos rerum.",
  },
]
`;

exports[`Notifications Service when listing notifications for a user will list notifications marked active after a given timestamp 1`] = `
[
  {
    "active": 1711206877852,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": undefined,
    "icon": "muscle",
    "id": "66c5d4d7-8126-4b05-9f2a-6774a7313d2b",
    "message": "Eaque animi aperiam officiis similique. Atque doloribus voluptates alias ipsum eaque. Quam dolore dignissimos porro voluptate porro iste quae. Fuga nesciunt debitis. Cupiditate fugiat fugiat est eos quam officia occaecati voluptatem. Delectus at corrupti ipsam.",
    "title": "Similique nesciunt optio.",
  },
  {
    "active": 1710797486978,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1712338844964,
    "icon": "chop",
    "id": "e0692ce8-27f5-48bd-82a6-db01488799ee",
    "message": "Aperiam itaque voluptas. Quasi et aliquam corporis. Culpa voluptas ab. Totam vel quos. Est voluptatibus placeat facere officia at. Libero soluta facilis eius.",
    "title": "Repellendus aliquam ullam.",
  },
  {
    "active": 1710765272992,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1712688614358,
    "icon": "reprocessing",
    "id": "62b7c664-d3ba-4016-8af1-e3c488d5823e",
    "message": "At earum voluptas quia. Corporis rerum totam saepe cumque repellendus laboriosam quisquam quibusdam magnam. Veritatis incidunt optio animi quod id amet aperiam.",
    "title": "Magni quas impedit dolorum accusamus rem facilis.",
  },
  {
    "active": 1709536672302,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1713881813120,
    "icon": "silo",
    "id": "882ee7cf-bcd4-4671-aac9-80f7bfd84b7c",
    "message": "Ratione dolores quod illo nisi fuga corrupti. Quaerat iure doloremque minima. Quod voluptatum laborum provident neque eos libero. Itaque quibusdam nihil molestiae. Rem placeat sint quas eius provident doloribus ut.",
    "title": "Voluptatem ullam explicabo accusamus culpa placeat reiciendis.",
  },
  {
    "active": 1706868763860,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1711531681364,
    "icon": "gamma-ray",
    "id": "e7c28880-7bdf-4fe6-bfbf-23a8fd49043e",
    "message": "Nisi doloremque repudiandae. Velit fugit laborum illum culpa ducimus mollitia explicabo esse. Molestiae voluptatum nesciunt odit amet voluptate. Labore corrupti voluptates et earum modi adipisci. Similique laborum fugit facere.",
    "title": "Quia eum possimus accusantium optio ex reiciendis.",
  },
  {
    "active": 1706416826392,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1711516217406,
    "icon": "luxury",
    "id": "24fe8aca-9a75-4b23-8734-9214f319195e",
    "message": "Dicta asperiores odio. Aut aut non aliquam deserunt quae quia adipisci. Earum in eos placeat dolores placeat nobis optio id veritatis. Cum non quasi magni. A ex praesentium pariatur.",
    "title": "Ea accusantium tempora.",
  },
  {
    "active": 1706346302434,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1711481953679,
    "icon": "alley",
    "id": "f8c26922-638a-4bac-a9b4-2d0a6a6e5512",
    "message": "Hic ducimus ducimus. Impedit error asperiores laudantium sint. Illum ipsum nulla veniam praesentium iste.",
    "title": "Quae expedita natus eum molestiae eaque accusamus vitae.",
  },
  {
    "active": 1706226256285,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1713357766217,
    "icon": "vitamin",
    "id": "180a8843-cd33-4871-8383-899753b8fa31",
    "message": "Assumenda dolorem ab quibusdam cupiditate pariatur consequuntur laborum. Veritatis unde explicabo itaque optio inventore fuga et tempore. Iure ad ratione natus quaerat nisi architecto veniam. Voluptatibus quas ipsa repudiandae consequatur dignissimos quo consequuntur itaque modi.",
    "title": "Consectetur illo officiis corrupti labore veniam saepe maxime dolorum autem.",
  },
]
`;

exports[`Notifications Service when listing notifications for a user will list notifications with default options 1`] = `
[
  {
    "active": 1711206877852,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": undefined,
    "icon": "muscle",
    "id": "66c5d4d7-8126-4b05-9f2a-6774a7313d2b",
    "message": "Eaque animi aperiam officiis similique. Atque doloribus voluptates alias ipsum eaque. Quam dolore dignissimos porro voluptate porro iste quae. Fuga nesciunt debitis. Cupiditate fugiat fugiat est eos quam officia occaecati voluptatem. Delectus at corrupti ipsam.",
    "title": "Similique nesciunt optio.",
  },
  {
    "active": 1710797486978,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1712338844964,
    "icon": "chop",
    "id": "e0692ce8-27f5-48bd-82a6-db01488799ee",
    "message": "Aperiam itaque voluptas. Quasi et aliquam corporis. Culpa voluptas ab. Totam vel quos. Est voluptatibus placeat facere officia at. Libero soluta facilis eius.",
    "title": "Repellendus aliquam ullam.",
  },
  {
    "active": 1710765272992,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1712688614358,
    "icon": "reprocessing",
    "id": "62b7c664-d3ba-4016-8af1-e3c488d5823e",
    "message": "At earum voluptas quia. Corporis rerum totam saepe cumque repellendus laboriosam quisquam quibusdam magnam. Veritatis incidunt optio animi quod id amet aperiam.",
    "title": "Magni quas impedit dolorum accusamus rem facilis.",
  },
  {
    "active": 1709536672302,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1713881813120,
    "icon": "silo",
    "id": "882ee7cf-bcd4-4671-aac9-80f7bfd84b7c",
    "message": "Ratione dolores quod illo nisi fuga corrupti. Quaerat iure doloremque minima. Quod voluptatum laborum provident neque eos libero. Itaque quibusdam nihil molestiae. Rem placeat sint quas eius provident doloribus ut.",
    "title": "Voluptatem ullam explicabo accusamus culpa placeat reiciendis.",
  },
  {
    "active": 1706868763860,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1711531681364,
    "icon": "gamma-ray",
    "id": "e7c28880-7bdf-4fe6-bfbf-23a8fd49043e",
    "message": "Nisi doloremque repudiandae. Velit fugit laborum illum culpa ducimus mollitia explicabo esse. Molestiae voluptatum nesciunt odit amet voluptate. Labore corrupti voluptates et earum modi adipisci. Similique laborum fugit facere.",
    "title": "Quia eum possimus accusantium optio ex reiciendis.",
  },
  {
    "active": 1706416826392,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1711516217406,
    "icon": "luxury",
    "id": "24fe8aca-9a75-4b23-8734-9214f319195e",
    "message": "Dicta asperiores odio. Aut aut non aliquam deserunt quae quia adipisci. Earum in eos placeat dolores placeat nobis optio id veritatis. Cum non quasi magni. A ex praesentium pariatur.",
    "title": "Ea accusantium tempora.",
  },
  {
    "active": 1706346302434,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1711481953679,
    "icon": "alley",
    "id": "f8c26922-638a-4bac-a9b4-2d0a6a6e5512",
    "message": "Hic ducimus ducimus. Impedit error asperiores laudantium sint. Illum ipsum nulla veniam praesentium iste.",
    "title": "Quae expedita natus eum molestiae eaque accusamus vitae.",
  },
  {
    "active": 1706226256285,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1713357766217,
    "icon": "vitamin",
    "id": "180a8843-cd33-4871-8383-899753b8fa31",
    "message": "Assumenda dolorem ab quibusdam cupiditate pariatur consequuntur laborum. Veritatis unde explicabo itaque optio inventore fuga et tempore. Iure ad ratione natus quaerat nisi architecto veniam. Voluptatibus quas ipsa repudiandae consequatur dignissimos quo consequuntur itaque modi.",
    "title": "Consectetur illo officiis corrupti labore veniam saepe maxime dolorum autem.",
  },
  {
    "active": 1704723622240,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1713084943503,
    "icon": "exchange",
    "id": "e7e89014-5040-4100-930c-766d103de86c",
    "message": "Itaque rem adipisci ut accusamus minus omnis vitae. Animi dolore fugiat unde eum sunt voluptatum veniam quis. Dolore veniam alias odio minus illo. Possimus expedita aspernatur sit assumenda. Quod autem nesciunt in aperiam soluta sunt odio reprehenderit dolorum. Placeat harum quia nemo.",
    "title": "Cumque enim corrupti laboriosam fugit incidunt.",
  },
  {
    "active": 1703944963975,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1713176703019,
    "icon": "rally",
    "id": "e915b570-e8f4-4ca5-a1a0-6460db969715",
    "message": "Quia aliquid aperiam architecto molestiae debitis tempore nobis autem. Architecto ex praesentium iure. Qui rerum quas itaque. Vitae praesentium dolores rerum fugit natus. Facere omnis incidunt tempore excepturi sit aliquam similique dolorum. Alias eveniet occaecati deleniti.",
    "title": "Qui harum voluptatem.",
  },
  {
    "active": 1703121718755,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1713875405780,
    "icon": "top",
    "id": "2eb0bfb4-70a4-476e-89af-26de11154e6a",
    "message": "Iure est quod. Unde ea temporibus. Nihil saepe quas. Placeat quos quasi iusto consectetur perferendis. Eaque voluptatem soluta maxime hic voluptas aut delectus. Quasi itaque perspiciatis soluta.",
    "title": "Voluptates perferendis natus aperiam incidunt maiores in.",
  },
  {
    "active": 1702576021665,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1712161492615,
    "icon": "basement",
    "id": "fa0bb615-1715-418b-931f-ba1c7aa6d88d",
    "message": "Nesciunt consequuntur eos praesentium qui minima vero repudiandae nemo. Quasi dolorem hic aperiam provident sequi. Esse nam ad ducimus minima quae qui.",
    "title": "Quo corporis reprehenderit rerum laudantium ab veniam officia.",
  },
  {
    "active": 1702567223800,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1713497591878,
    "icon": "airbus",
    "id": "c6c82a3e-38db-471c-b89b-8c525bb926fb",
    "message": "Illum fuga fugiat ullam accusamus quos quos. Nulla magni laboriosam dolores. Aliquam excepturi accusamus hic assumenda commodi qui assumenda consectetur assumenda. Voluptatem saepe asperiores impedit. Sunt asperiores accusantium. Voluptatem cum eum laborum est veniam.",
    "title": "Quibusdam incidunt quasi quod.",
  },
  {
    "active": 1702037516393,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": undefined,
    "icon": "doctorate",
    "id": "4afea3c0-a94d-4477-a77b-c38b361022d5",
    "message": "Tempore aspernatur veritatis suscipit dolore. Tenetur autem facere illum nam consequuntur enim libero placeat. Quibusdam dicta sit eius dignissimos reprehenderit necessitatibus accusantium. Facere blanditiis porro dolorum nobis ullam illum. Minus quidem necessitatibus. Ratione cumque eaque sunt excepturi suscipit eius.",
    "title": "Qui ut nemo.",
  },
  {
    "active": 1701702054262,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1712099850299,
    "icon": "arrival",
    "id": "f24d93f9-947e-4cdf-b002-305c4a2650d7",
    "message": "Sapiente quibusdam accusamus earum nostrum in. Quibusdam perspiciatis eligendi cupiditate libero vitae vel aperiam. Fugit aut doloremque accusamus vitae laudantium consequuntur. Sed voluptatem esse earum. Tempore itaque odit vero mollitia magni consequuntur optio.",
    "title": "Suscipit nemo earum.",
  },
  {
    "active": 1700132947597,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": undefined,
    "icon": "handle",
    "id": "02c5d5ac-8fbe-4a3f-a1dd-413a79d74cb6",
    "message": "Nihil deleniti neque molestiae debitis officia eum. Corporis recusandae illum aliquam quia doloremque facere consectetur. Dolorem delectus nisi placeat.",
    "title": "Sed ea culpa.",
  },
  {
    "active": 1699780400667,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1712692653467,
    "icon": "panty",
    "id": "42592163-c976-4dc4-85c2-f7355093c96e",
    "message": "Accusantium assumenda mollitia id eveniet. Odio dolorum laboriosam. Vero voluptatem ipsam dolor molestiae aut.",
    "title": "Laudantium quis occaecati explicabo.",
  },
  {
    "active": 1699750105073,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1712481533350,
    "icon": "intervention",
    "id": "800cd884-dc61-4573-bfee-fd6613dc74aa",
    "message": "Magni error animi dignissimos voluptate expedita alias vero praesentium. Ipsam excepturi porro voluptatum tempore deserunt esse eius at aliquid. Nihil autem aperiam corporis animi laboriosam officia aliquam ipsa molestias. Tenetur asperiores perferendis iure facilis fugiat.",
    "title": "Perspiciatis ad similique explicabo deleniti labore a minima non veritatis.",
  },
  {
    "active": 1698898027108,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1711638689876,
    "icon": "comment",
    "id": "e569788f-d065-4f73-a7a5-2b4039fed33f",
    "message": "Quidem quasi impedit ipsam reprehenderit accusantium praesentium. Repudiandae dolorum saepe. Perferendis provident corrupti eos aliquid quae nemo. Totam consectetur molestias qui hic porro non alias odit. Non quo labore.",
    "title": "Harum eligendi nihil ab quae veniam eius.",
  },
  {
    "active": 1697190409611,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1712463836126,
    "icon": "balloon",
    "id": "48b3856a-cc0d-42e2-97a2-93380e941bee",
    "message": "Aliquid eligendi placeat iure excepturi perferendis praesentium ullam. Error sequi in velit iusto deserunt dolorem labore. Totam recusandae quos. Id corrupti ipsum minima ut officia. Delectus temporibus tempore.",
    "title": "Repellendus neque debitis libero optio voluptatum eius laboriosam iusto.",
  },
  {
    "active": 1697006325398,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": undefined,
    "icon": "burst",
    "id": "b5d1da99-c8d2-45e0-b8fe-02bcf6e53db0",
    "message": "Quod deserunt similique atque ab dicta. Enim accusantium consequuntur aliquid sint iure. Quod necessitatibus ad doloribus. Alias blanditiis autem eligendi doloribus quaerat quas facilis ea explicabo.",
    "title": "Asperiores occaecati ipsa pariatur iure similique incidunt.",
  },
]
`;

exports[`Notifications Service when listing notifications for a user will list notifications with pagination 1`] = `
[
  {
    "active": 1704723622240,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1713084943503,
    "icon": "exchange",
    "id": "e7e89014-5040-4100-930c-766d103de86c",
    "message": "Itaque rem adipisci ut accusamus minus omnis vitae. Animi dolore fugiat unde eum sunt voluptatum veniam quis. Dolore veniam alias odio minus illo. Possimus expedita aspernatur sit assumenda. Quod autem nesciunt in aperiam soluta sunt odio reprehenderit dolorum. Placeat harum quia nemo.",
    "title": "Cumque enim corrupti laboriosam fugit incidunt.",
  },
  {
    "active": 1703944963975,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1713176703019,
    "icon": "rally",
    "id": "e915b570-e8f4-4ca5-a1a0-6460db969715",
    "message": "Quia aliquid aperiam architecto molestiae debitis tempore nobis autem. Architecto ex praesentium iure. Qui rerum quas itaque. Vitae praesentium dolores rerum fugit natus. Facere omnis incidunt tempore excepturi sit aliquam similique dolorum. Alias eveniet occaecati deleniti.",
    "title": "Qui harum voluptatem.",
  },
  {
    "active": 1703121718755,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1713875405780,
    "icon": "top",
    "id": "2eb0bfb4-70a4-476e-89af-26de11154e6a",
    "message": "Iure est quod. Unde ea temporibus. Nihil saepe quas. Placeat quos quasi iusto consectetur perferendis. Eaque voluptatem soluta maxime hic voluptas aut delectus. Quasi itaque perspiciatis soluta.",
    "title": "Voluptates perferendis natus aperiam incidunt maiores in.",
  },
  {
    "active": 1702576021665,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1712161492615,
    "icon": "basement",
    "id": "fa0bb615-1715-418b-931f-ba1c7aa6d88d",
    "message": "Nesciunt consequuntur eos praesentium qui minima vero repudiandae nemo. Quasi dolorem hic aperiam provident sequi. Esse nam ad ducimus minima quae qui.",
    "title": "Quo corporis reprehenderit rerum laudantium ab veniam officia.",
  },
  {
    "active": 1702567223800,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1713497591878,
    "icon": "airbus",
    "id": "c6c82a3e-38db-471c-b89b-8c525bb926fb",
    "message": "Illum fuga fugiat ullam accusamus quos quos. Nulla magni laboriosam dolores. Aliquam excepturi accusamus hic assumenda commodi qui assumenda consectetur assumenda. Voluptatem saepe asperiores impedit. Sunt asperiores accusantium. Voluptatem cum eum laborum est veniam.",
    "title": "Quibusdam incidunt quasi quod.",
  },
  {
    "active": 1702037516393,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": undefined,
    "icon": "doctorate",
    "id": "4afea3c0-a94d-4477-a77b-c38b361022d5",
    "message": "Tempore aspernatur veritatis suscipit dolore. Tenetur autem facere illum nam consequuntur enim libero placeat. Quibusdam dicta sit eius dignissimos reprehenderit necessitatibus accusantium. Facere blanditiis porro dolorum nobis ullam illum. Minus quidem necessitatibus. Ratione cumque eaque sunt excepturi suscipit eius.",
    "title": "Qui ut nemo.",
  },
  {
    "active": 1701702054262,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1712099850299,
    "icon": "arrival",
    "id": "f24d93f9-947e-4cdf-b002-305c4a2650d7",
    "message": "Sapiente quibusdam accusamus earum nostrum in. Quibusdam perspiciatis eligendi cupiditate libero vitae vel aperiam. Fugit aut doloremque accusamus vitae laudantium consequuntur. Sed voluptatem esse earum. Tempore itaque odit vero mollitia magni consequuntur optio.",
    "title": "Suscipit nemo earum.",
  },
  {
    "active": 1700132947597,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": undefined,
    "icon": "handle",
    "id": "02c5d5ac-8fbe-4a3f-a1dd-413a79d74cb6",
    "message": "Nihil deleniti neque molestiae debitis officia eum. Corporis recusandae illum aliquam quia doloremque facere consectetur. Dolorem delectus nisi placeat.",
    "title": "Sed ea culpa.",
  },
  {
    "active": 1699780400667,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1712692653467,
    "icon": "panty",
    "id": "42592163-c976-4dc4-85c2-f7355093c96e",
    "message": "Accusantium assumenda mollitia id eveniet. Odio dolorum laboriosam. Vero voluptatem ipsam dolor molestiae aut.",
    "title": "Laudantium quis occaecati explicabo.",
  },
  {
    "active": 1699750105073,
    "callsToAction": undefined,
    "dismissed": false,
    "expires": 1712481533350,
    "icon": "intervention",
    "id": "800cd884-dc61-4573-bfee-fd6613dc74aa",
    "message": "Magni error animi dignissimos voluptate expedita alias vero praesentium. Ipsam excepturi porro voluptatum tempore deserunt esse eius at aliquid. Nihil autem aperiam corporis animi laboriosam officia aliquam ipsa molestias. Tenetur asperiores perferendis iure facilis fugiat.",
    "title": "Perspiciatis ad similique explicabo deleniti labore a minima non veritatis.",
  },
]
`;

exports[`Notifications Service when retrieving a single notification will return the requested notification 1`] = `
{
  "active": 1709536672302,
  "callsToAction": undefined,
  "dismissed": false,
  "expires": 1713881813120,
  "icon": "silo",
  "id": "882ee7cf-bcd4-4671-aac9-80f7bfd84b7c",
  "message": "Ratione dolores quod illo nisi fuga corrupti. Quaerat iure doloremque minima. Quod voluptatum laborum provident neque eos libero. Itaque quibusdam nihil molestiae. Rem placeat sint quas eius provident doloribus ut.",
  "title": "Voluptatem ullam explicabo accusamus culpa placeat reiciendis.",
}
`;
